--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3269,3 +3269,41 @@ html {
     border-color: #38a1ee !important;
     background-color: white !important;
 }
+
+.descripcion-html {
+    line-height: 1.6;
+    color: #444;
+    font-size: 1rem;
+}
+
+.descripcion-html p {
+    margin-bottom: 15px;
+}
+
+.descripcion-html ul, 
+.descripcion-html ol {
+    margin-left: 20px;
+    margin-bottom: 15px;
+    padding-left: 20px;
+}
+
+.descripcion-html ul {
+    list-style-type: disc;
+}
+
+.descripcion-html ol {
+    list-style-type: decimal;
+}
+
+.descripcion-html h1, 
+.descripcion-html h2, 
+.descripcion-html h3 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.descripcion-html a {
+    color: #38a1ee;
+    text-decoration: underline;
+}
